[ADD] added test output for reference